--- a/index.html
+++ b/index.html
@@ -52,7 +52,8 @@
                 <h2>Pesquisa</h2>
             </button>
             <p></p>
-            <button class="primary-button" type="button" onclick="window.location.href='https://bit.ly/falecomTulipario'">
+            <button class="primary-button" type="button"
+                onclick="window.location.href='https://bit.ly/falecomTulipario'">
                 <h2>Contato</h2>
             </button>
         </div>
