--- a/pesquisa.html
+++ b/pesquisa.html
@@ -34,99 +34,60 @@
 
     <main>
         <h1>Pesquisa de Mercado</h1>
-            <p></p>
-            <div class="card">
-                <span class="frase">Gostaríamos da sua ajuda para definirmos um novo produto para a próxima coleção. Responda esse questionário e ajude-nos a entregar peças de uso mais consciente e sustentável.
-                </span>
-            </div>
-            <p></p>
-        
-       
+        <p></p>
+        <div class="card">
+            <span class="frase">Gostaríamos da sua ajuda para definirmos um novo produto para a próxima coleção.
+                Responda esse questionário e ajude-nos a entregar peças de uso mais consciente e sustentável.
+            </span>
+        </div>
+        <p></p>
+
+
 
         <div id="forms">
 
 
-        <form>
-            <div class="input-group">
-                <label for="name">Nome</label>
-                <input 
-                    type="text"
-                    name="name"
-                    id="name"
-                    data-min-length="3"
-                    data-max-length="16"
-                    data-required
-                />
-            </div>
-
-            <div class="input-group">
-                <label for="date">Data de nascimento</label>
-                <input 
-                    type="date"
-                    name="date"
-                    id="date"
-                    data-required
-                />
-            </div>
-
-            <div class="input-group">
-                <label for="name">Peça de roupa favorita</label>
-                <input 
-                    type="text"
-                    name="peca_favorita"
-                    id="peca_favorita"
-                    data-max-length="16"
-                    data-required
-                />
-            </div>
-
-            <div class="input-group">
-                <label for="valor">Valor máximo que já pagou em 1 peça de roupa</label>
-                <input 
-                    type="number"
-                    step="0.01"
-                    name="valor"
-                    id="valor"
-                />
-            </div>
-
-            <div class="input-group">
-                <label for="peca_usada">Já comprou peça usada?</label>
-                <input
-                  type="hidden"
-                  name="peca_usada"
-                  id="peca_usada"
-                  value="1"
-                  required
-                />
-  
-                <div class="button-select">
-                  <button data-value="1"
-                  onclick="toggleSelect(event)"
-                  type="button"
-                  class="active">Sim</button>
-                  <button data-value="0"
-                  onclick="toggleSelect(event)"
-                  type="button"
-                  >Não</button>
+            <form>
+                <div class="input-group">
+                    <label for="name">Nome</label>
+                    <input type="text" name="name" id="name" data-min-length="3" data-max-length="16" data-required />
                 </div>
 
-            <div class="input-group">
-                <label for="whatsapp">Número de whatsapp</label>
-                <input
-                    type="number"
-                    id="whatsapp"
-                    name="whatsapp" 
-                    id="whatsapp"
-                />
-              </div>
-  
-            <div class="input-group actions">
-                <button id="ok-button">Salvar</button>
-            </div>
+                <div class="input-group">
+                    <label for="date">Data de nascimento</label>
+                    <input type="date" name="date" id="date" data-required />
+                </div>
 
-        </form>
-   
+                <div class="input-group">
+                    <label for="name">Peça de roupa favorita</label>
+                    <input type="text" name="peca_favorita" id="peca_favorita" data-max-length="16" data-required />
+                </div>
+
+                <div class="input-group">
+                    <label for="valor">Valor máximo que já pagou em 1 peça de roupa</label>
+                    <input type="number" step="0.01" name="valor" id="valor" />
+                </div>
+
+                <div class="input-group">
+                    <label for="peca_usada">Já comprou peça usada?</label>
+                    <input type="hidden" name="peca_usada" id="peca_usada" value="1" required />
+
+                    <div class="button-select">
+                        <button data-value="1" onclick="toggleSelect(event)" type="button" class="active">Sim</button>
+                        <button data-value="0" onclick="toggleSelect(event)" type="button">Não</button>
+                    </div>
+
+                    <div class="input-group">
+                        <label for="whatsapp">Número de whatsapp</label>
+                        <input type="number" id="whatsapp" name="whatsapp" id="whatsapp" />
+                    </div>
+
+                    <div class="input-group actions">
+                        <button id="ok-button">Salvar</button>
+                    </div>
+
+            </form>
+
 
     </main>
 
